# PeliCap

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  idea.md  main.cpp  module1.md  module2.md  readme.md  vcpkg.json
ai_service/: config.py  main.py  requirements.txt
ai_service/classifier/: query_classifier.py
ai_service/context/: alert_fetcher.py  baseline_tracker.py  context_builder.py  context_formatter.py  flow_fetcher.py  metrics_fetcher.py
ai_service/conversation/: conversation_store.py
ai_service/groq/: groq_client.py
ai_service/models/: schemas.py
ai_service/processing/: response_processor.py
ai_service/prompts/: system_prompt.py  templates.py
ai_service/rate_limiting/: rate_limiter.py
ai_service/streaming/: sse_handler.py
api/: alert_ws_controller.hpp  capture_api.cpp  metrics_ws_controller.hpp
config/: detectors.json
core/capture/: capture_session.cpp  capture_session.hpp  interface_discovery.cpp  interface_discovery.hpp  packet.hpp  pcap_loader.cpp  pcap_loader.hpp
core/detection/: alert.hpp  alert_store.hpp  cooldown_tracker.hpp  detection_engine.cpp  detection_engine.hpp  detector_base.hpp  ewma_baseline.hpp  pg_store.hpp
core/detection/detectors/: dns_latency.hpp  dns_nxdomain.hpp  high_rtt.hpp  http_error_rate.hpp  http_latency.hpp  large_flow.hpp  port_scan.hpp  tcp_retransmission.hpp  traffic_spike.hpp  zero_window.hpp
core/dispatch/: packet_bus.hpp  parsed_packet_bus.hpp
core/dissector/: dissector_engine.cpp  dissector_engine.hpp  parsed_packet.hpp  serializer.hpp
core/flow/: flow.hpp  flow_engine.cpp  flow_engine.hpp  flow_key.hpp  flow_serializer.hpp  flow_table.hpp
core/metrics/: dns_metrics.hpp  dns_transaction_tracker.hpp  http_metrics.hpp  latency_histogram.hpp  metric_window.hpp  metrics_engine.cpp  metrics_engine.hpp  network_metrics.hpp  tcp_metrics.hpp  topn_tracker.hpp
core/search/executor/: search_executor.cpp  search_executor.hpp
core/search/planner/: query_planner.cpp  query_planner.hpp
core/search/query/: ast.hpp  field_registry.cpp  field_registry.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
core/storage/: batch_writer.cpp  batch_writer.hpp  pcap_file_manager.cpp  pcap_file_manager.hpp  pg_connection_pool.cpp  pg_connection_pool.hpp  storage_engine.cpp  storage_engine.hpp  write_queue.hpp
core/storage/migrations/: migration_runner.cpp  migration_runner.hpp
core/storage/retention/: retention_manager.cpp  retention_manager.hpp
docker/: Dockerfile
documentation/: module1.md  module2.md  module3.md  module4.md  module5.md  module6.md  module7.md  module8.md  module9.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/layout/: PageLayout.jsx  SessionBanner.jsx  Sidebar.jsx  TopBar.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Skeleton.jsx
frontend/src/pages/: AiCopilot.jsx  Alerts.jsx  DnsAnalytics.jsx  FlowExplorer.jsx  HttpAnalytics.jsx  NetworkTopology.jsx  Overview.jsx  PacketExplorer.jsx  Sessions.jsx  Settings.jsx
frontend/src/store/: captureStore.js  timeRangeStore.js
sql/: 001_alerts.sql  002_ai_conversations.sql
